Fix spacing, modify links

--- a/page/sass/manual.scss
+++ b/page/sass/manual.scss
@@ -263,4 +263,13 @@
     transform: translateY(-150px);
     width: 350px;
   }
+
+  .extra {
+    text-align: center;
+  }
+  
+  .extra-space {
+    padding-bottom: 380px;
+  }
+  
 }
